# core

./: .env.example  .gitattributes  .gitignore  .golangci.yaml  .goreleaser.yaml  AGENTS.md  CONTRIBUTING  CONTRIBUTING.md  LICENSE  LICENSE.md  Makefile  NOTES.md  README.md  SECURITY  agents.md  design.md  docker-compose.yaml  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sqlc.yaml  turbo.json
.claude/: settings.local.json
.github/workflows/: api-cp.yml  api.yml  kernel.yaml  marketing.yml  opencode.yml  pipeline.yaml  scaled.yaml  ui.yml  web.yml
.opencode/: opencode.json
api/: AGENTS.md
api/api_doc/: yaak.rq_rrCeBnxzQE.yaml  yaak.wk_KJF6oyHis3.yaml
apps/api/: AGENTS.md  Dockerfile  config.go  config_test.go  go.mod  go.sum  main.go  package.json
apps/api-control-plane/: go.mod  go.sum  main.go
apps/db/: Dockerfile
apps/marketing/: next.config.ts  package.json  tailwind.config.ts
apps/scaled/: AGENTS.md  Cargo.toml  README.md  build.rs  go.mod  go.sum  main.go
apps/scaled/internal/config/: config.go  config_test.go
apps/scaled/internal/controlplane/: client.go  client_test.go
apps/web/: .env.example  package.json  tailwind.config.ts  vitest.config.ts
cmd/builderd/: main.go
cmd/controld/: main.go
cmd/controlp/: main.go
cmd/ops/: main.go
cmd/scalecp/: main.go
cmd/scaled/: main.go  (+1 more)
control/: control.go
docs/: DEVELOPMENT.md  dynamic-metal-provisioning.md  dynamic-node-provisioning.md  firecracker-best-practices.md  kernel-build.md
proto/: control.proto
scalecp/: scalecp.go
scaled/: scaled_linux.go
(+522 files in other folders)
