[package]
name = "scaled"
version = "0.1.0"
edition = "2024"
authors = ["tobiloba ogundiyan <apprentice_py@icloud.com>", "spacescale"]
description = "scaled is spacescale daemon and engine orchestrating secure firecracker microVMS, autonomous bare-metal node management and real time observability streaming."
readme = "README.md"
repository = "https://github.com/t0gun/spacescale/apps/scaled"
license = "still thinking"

[dependencies]
prost = "0.14.3"
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[build-dependencies]
tonic-prost-build = "0.14.5"
